Updated Page Scroll

--- a/index.html
+++ b/index.html
@@ -147,11 +147,9 @@
 	</footer>
 	</div>
 
-<!--
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+<div class="gototop js-top">
+		<a href="#page" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
--->	
 	
 	<!-- jQuery -->
     <script src="js/bootstrap.min.js"></script>
