--- a/about-me.html
+++ b/about-me.html
@@ -258,11 +258,9 @@ school in Berkshire, to help children enjoy reading and gain the essential skill
 	</footer>
 	</div>
 
-<!--
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+<div class="gototop js-top">
+		<a href="#page" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
--->	
 	
 <script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
