--- a/ux-design-contest.html
+++ b/ux-design-contest.html
@@ -881,11 +881,9 @@ similar offline experiences. An eased out usability increases the scope of the s
 	</footer>
 	</div>
 
-<!--
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+<div class="gototop js-top">
+		<a href="#page" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
--->	
 	
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
