--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
 	<aside id="hero">
 	<div class="container">
 		<div class="row">
-				<div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0 slider-text text-center">
+		  <div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0 slider-text text-center">
 				
-					<h2 class="text-left">Hello,</h2>
-					<h3  class="text-left">I'm Niharika - UX/UI Designer based in Atlanta</h3>
-					<h1  class="text-left">I am currently working designing to eliminate customer pain points<br>
+					<h2 class="text-center">Hello,</h2>
+					<h3  class="text-center">I'm Niharika - UX/UI Designer based in Atlanta</h3>
+					<h1  class="text-center">I am currently working designing to eliminate customer pain points<br>
 and reach desired business goals at <u>Democracy Lab.</u></h1>
-					<a href="about-me.html" class="text-center"><span>More about me</span></a>
-					</div>
+			  <a href="about-me.html" class="text-center"><span>More about me</span></a>			  </div>
 					
 			</div>
 			</div>
