--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ border:5px solid #e79a32;">
 					<p>Increase customers usage &
 signups on  website by redesigning existing
 Democracy Lab's website.</p>
-					<a href="#" class="btn btn-primary text-center">Coming Soon</a>
+					<a href="democracy-lab.html" class="btn btn-primary text-center">View Case Study</a>
 					</div>
 					
 					</div>	
